# stolink_fastapi_agent

./: .gitattributes  .gitignore  Dockerfile  MULTI-AGENT_ARCHITECTURE.md  PROJECT_ARCHITECTURE.md  README.md  SPRING_README.md  Stolink_프로젝트 설명.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  graph.py  llm.py  state.py  supervisor.py
app/agents/analysis/: __init__.py  consistency.py  plot.py  relationship.py
app/agents/extraction/: __init__.py  character.py  dialogue.py  emotion.py  event.py  setting.py
app/agents/validation/: __init__.py  validator.py
app/api/: analysis.py  health.py
app/schemas/: callback.py  characters.py  consistency.py  dialogues.py  emotions.py  events.py  messages.py  plot.py  relationships.py  settings.py
app/services/: analysis_service.py  callback_client.py  rabbitmq_consumer.py
tests/test_agents/: test_all_agents.ipynb  test_character_extraction.ipynb  test_consistency_check.ipynb  test_dialogue_analysis.ipynb  test_emotion_tracking.ipynb  test_event_extraction.ipynb  test_full_pipeline.ipynb  test_pipeline_integration.ipynb  test_plot_integration.ipynb  test_relationship_analysis.ipynb  test_setting_extraction.ipynb  test_validator.ipynb
