[project]
name = "sto-link-ai-backend"
version = "0.1.0"
description = "StoLink AI Backend - LangGraph Multi-Agent Story Analysis System"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    
    # LangChain & LangGraph
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-aws>=0.2.0",
    
    # AWS
    "boto3>=1.35.0",
    
    # Message Queue
    "aio-pika>=9.4.0",
    
    # HTTP Client
    "httpx>=0.27.0",
    
    # Data Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
